[package]
name = "passphrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
rand = "0.8.4"
directories = "3.0.2"
anyhow = "1.0.43"
thiserror = "1.0.26"
serde = "1.0.129"
clipboard = "0.5.0"
